# tokimeki-quant-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  railway.toml
proto/: benchmark_models.proto  event_pulse.proto  monte_carlo_var.proto  options_pricing.proto  order_book_arena.proto  payment_auth_arena.proto
src/: lib.rs  main.rs
src/engines/: benchmark_models.rs  black_scholes.rs  event_pulse.rs  mod.rs  monte_carlo.rs  order_book.rs  payment_auth.rs
src/services/: benchmark_models.rs  event_pulse.rs  mc_var.rs  mod.rs  opt_pricing.rs  order_book_arena.rs  payment_auth_arena.rs
src/sources/: bluesky.rs  mod.rs  stackoverflow.rs  wikipedia.rs
