[package]
name = "tokimeki-quant-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tokimeki-quant-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12"
prost = "0.13"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.7"
parking_lot = "0.12"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
futures-util = "0.3.33"
tokio-tungstenite = { version = "0.30.0", features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "stream", "rustls"] }
quick-xml = "0.36"

[dev-dependencies]
tonic-build = "0.12"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.12"
